# me-dashboard

./: .env.example.local  .env.example.prod  .gitignore  CONTRIBUTING.md  Dockerfile  GEMINI.md  Makefile  docker-compose.yml  pyproject.toml  ruff.toml
.agent/skills/dagster/: SKILL.md
.agent/skills/data_analysis/: SKILL.md
.agent/skills/data_quality/: SKILL.md
.agent/skills/linting/: SKILL.md
.claude/: .mcp.json  CLAUDE.md
.claude/agents/: duckdb-data-agent.md
.gemini/: settings.json
.gemini/agents/: dagster_gemini_agent.md  duckdb_gemini_agent.md
.github/workflows/: check_test_coverage.yml  deploy-health-lambda.yml  deploy-lambda-pipelines.yml  deploy-screentime-lambda.yml  diff_coverage.yml  run_related_tests.yml
data/dagster/: .gitkeep  dagster.yaml
docs/: data_dictionary.md  refresh_cadence.md
docs/data/: collection-screen-time-data.md
labmda_code/: gps-bronze.py
lambda_code/: health-data-collection.py  loc-data-collection.py  local-screentime-collection-script.py  screen-time-collection.py
scripts/: run_dagster_test.py
src/: main.py
src/assets/: __init__.py
src/configs/: file_paths.yml
src/jobs/: delta_optimization.py  spotify_play_history_jobs.py
src/resources/: data_loader.py  geo_encoder.py  github_resource.py  io_managers.py  psn_resource.py  spotify_resource.py
src/sensors/: email_failure_sensor.py
src/tests/: conftest.py  test_email_failure_sensor.py  test_notifications.py
src/utils/: aws.py  azure.py  data_loaders.py  date.py  encoder.py  global_helpers.py  health_data.py  notifications.py
(+37 files in other folders)
