[project]
name = "doug-dashboard"
version = "0.1.0"
description = "Dashboard displaying information about Doug"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adlfs>=2024.12.0",
    "azure-identity>=1.21.0",
    "boto3>=1.38.13",
    "dagster>=1.10.7",
    "dagster-deltalake-pandas>=0.26.13",
    "dagster-deltalake-polars>=0.26.13",
    "dagster-duckdb>=0.26.7",
    "dagster-duckdb-pandas>=0.26.7",
    "dagster-duckdb-polars>=0.26.7",
    "dagster-pandera>=0.26.7",
    "dagster-postgres>=0.26.7",
    "dagster-webserver>=1.10.7",
    "deltalake>=0.25.4",
    "furl>=2.1.4",
    "googlemaps>=4.10.0",
    "loguru>=0.7.3",
    "overrides>=7.7.0",
    "pandas>=2.2.3",
    "pandera>=0.23.1",
    "polars>=1.26.0",
    "psnawp-api>=2.1.0",
    "pygeohash>=3.2.0",
    "ruff>=0.11.2",
    "s3fs>=0.4.2",
    "tenacity>=9.0.0",
    "xlsxwriter>=3.2.2",
]
